[package]
name = "ensemblecalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
rfd = "0.12"
rand = "0.8"
egui = "0.22"
hound = "3.5"
rayon = "1.7"
rodio = "0.17"
anyhow = "1.0"
argmin = "0.8"
eframe = "0.22"
nalgebra = "0.32"
num_cpus = "1.16"
serde_json = "1.0"
threadpool = "1.8"
pretty_env_logger = "0.5"
crossbeam-channel = "0.5"

kdam = { version = "0.4", features = ["rich"] }
clap = { version = "4.4", features = ["derive"] }
argmin-math = { version = "0.3", features = ["vec"] }
